# corroded-backdoor

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  link.ld
cb0/: Cargo.toml  build.rs  key.sym
cb0/.cargo/: config.toml
cb0/src/: garbage.rs  grain.rs  main.rs  payload.rs  sys.rs
cb1/: Cargo.toml  build.rs
cb1/src/: constants.rs  main.rs
cb1s/: Cargo.toml  build.rs
cb1s/.cargo/: config.toml
cb1s/src/: main.rs
playgound/: Cargo.toml  build.rs
playgound/src/: main.rs
src/: main.rs
