cargo-features = ["panic-immediate-abort"]

[package]
name = "cb1"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2.2.0", default-features = false }
heapless = "0.9.2"
itoa = "1.0.17"
linux-syscall = "1.2.0"

[profile.release]
panic="immediate-abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
panic="abort"
